--- a/index.html
+++ b/index.html
@@ -502,6 +502,7 @@
 
           // Se chegou aqui, é porque não tem os tokens
           throw new Error('Tokens não encontrados na resposta');
+          console.log('Login falhou:', response.data);
 
         } catch (error) {
           // console.error('Erro no login:', error);
