--- a/index.html
+++ b/index.html
@@ -469,87 +469,36 @@
           return;
         }
 
-        // try {
-        //   const response = await axiosInstance.post('/auth/login', { username, password });
-
-        //   // if (response.status === 200 && response.data.token) {
-        //   //   document.cookie = `authToken=${response.data.token}; path=/; secure; max-age=86400`;
-
-        //   //   // Muda para a tela de chat
-        //   //   // document.getElementById('loginScreen').style.display = 'none';
-        //   //   document.getElementById('loginBackground').style.display = 'none';
-        //   //   document.getElementById('chatScreen').style.display = 'flex';
-
-        //   //   setInitialMessageTime();
-        //   // } else {
-        //   //   console.log('Login falhou:', response.data);
-        //   //   alert('Usuário ou senha incorretos.');
-        //   // }
-
-        //   // Verifica se a resposta contém os tokens
-        //   if (response.data.accessToken || response.data.refreshToken) {
-        //     // Salva os tokens nos cookies
-        //     document.cookie = `accessToken=${response.data.accessToken}; path=/; secure; max-age=86400`;
-        //     document.cookie = `refreshToken=${response.data.refreshToken}; path=/; secure; max-age=86400`;
-
-        //     // Muda para a tela de chat
-        //     document.getElementById('loginBackground').style.display = 'none';
-        //     document.getElementById('chatScreen').style.display = 'flex';
-
-        //     setInitialMessageTime();
-        //     return;
-        //   }
-        //   console.log('Login falhou:', response.data);
-
-        //   // Se chegou aqui, é porque não tem os tokens
-        //   throw new Error('Tokens não encontrados na resposta');
-
-        // } catch (error) {
-        //   // console.error('Erro no login:', error);
-        //   // alert('Falha na conexão com o servidor.');
-
-        //   console.error('Erro no login:', error);
-
-        //   // Verifica se já temos os tokens nos cookies antes de mostrar o erro
-        //   const hasAccessToken = document.cookie.includes('accessToken');
-        //   const hasRefreshToken = document.cookie.includes('refreshToken');
-
-        //   if (hasAccessToken && hasRefreshToken) {
-        //     // Se temos os tokens, consideramos o login bem-sucedido
-        //     document.getElementById('loginBackground').style.display = 'none';
-        //     document.getElementById('chatScreen').style.display = 'flex';
-        //     setInitialMessageTime();
-        //   } else {
-        //     alert('Usuário ou senha incorretos.');
-        //   }
-        // }
-
         try {
           const response = await axiosInstance.post('/auth/login', { username, password });
+          console.log('Resposta do login:', response.data);
 
-          // Verifica se o login foi bem sucedido pela mensagem
+          // Se a mensagem indica sucesso, procede com o login
           if (response.data.message === 'Login bem-sucedido.') {
-            // Após login bem sucedido, verifica os tokens nos cookies
-            const hasAccessToken = document.cookie.includes('accessToken');
-            const hasRefreshToken = document.cookie.includes('refreshToken');
+            // Verifica os cookies após um pequeno delay para garantir que foram setados
+            setTimeout(() => {
+              const hasAccessToken = document.cookie.includes('accessToken');
+              const hasRefreshToken = document.cookie.includes('refreshToken');
 
-            if (hasAccessToken && hasRefreshToken) {
-              // Login bem sucedido e tokens presentes
-              document.getElementById('loginBackground').style.display = 'none';
-              document.getElementById('chatScreen').style.display = 'flex';
-              setInitialMessageTime();
-              return;
-            }
+              if (hasAccessToken && hasRefreshToken) {
+                // Login bem sucedido e tokens presentes
+                document.getElementById('loginBackground').style.display = 'none';
+                document.getElementById('chatScreen').style.display = 'flex';
+                setInitialMessageTime();
+              } else {
+                console.warn('Tokens não encontrados nos cookies');
+              }
+            }, 100);
+
+            return;
           }
 
-          console.log('Login falhou:', response.data);
-
-          // Se chegou aqui, algo deu errado
-          throw new Error('Falha na autenticação');
+          // Se chegou aqui, a mensagem não indica sucesso
+          throw new Error('Resposta inesperada do servidor');
 
         } catch (error) {
           console.error('Erro no login:', error);
-          alert('Usuário ou senha incorretos.');
+          alert('Não foi possível realizar o login. Tente novamente.');
         }
       }
 
