--- a/index.html
+++ b/index.html
@@ -474,27 +474,39 @@
           console.log('Resposta do login:', response.data);
 
           // Se a mensagem indica sucesso, procede com o login
-          if (response.data.message === 'Login bem-sucedido.') {
-            // Verifica os cookies após um pequeno delay para garantir que foram setados
-            setTimeout(() => {
-              const hasAccessToken = document.cookie.includes('accessToken');
-              const hasRefreshToken = document.cookie.includes('refreshToken');
+          // if (response.data.message === 'Login bem-sucedido.') {
+          //   // Verifica os cookies após um pequeno delay para garantir que foram setados
+          //   setTimeout(() => {
+          //     const hasAccessToken = document.cookie.includes('accessToken');
+          //     const hasRefreshToken = document.cookie.includes('refreshToken');
 
-              if (hasAccessToken && hasRefreshToken) {
-                // Login bem sucedido e tokens presentes
-                document.getElementById('loginBackground').style.display = 'none';
-                document.getElementById('chatScreen').style.display = 'flex';
-                setInitialMessageTime();
-              } else {
-                console.warn('Tokens não encontrados nos cookies');
-              }
-            }, 100);
+          //     if (hasAccessToken && hasRefreshToken) {
+          //       // Login bem sucedido e tokens presentes
+          //       document.getElementById('loginBackground').style.display = 'none';
+          //       document.getElementById('chatScreen').style.display = 'flex';
+          //       setInitialMessageTime();
+          //     } else {
+          //       console.warn('Tokens não encontrados nos cookies');
+          //     }
+          //   }, 100);
 
-            return;
+          //   return;
+          // }
+          if (response.data.accessToken && response.data.refreshToken) {
+            // Armazena os tokens nos cookies (opcional: localStorage também)
+            document.cookie = `authToken=${response.data.accessToken}; path=/; secure; max-age=86400`;
+            document.cookie = `refreshToken=${response.data.refreshToken}; path=/; secure; max-age=86400`;
+
+            // Troca de telas (login -> chat)
+            document.getElementById('loginBackground').style.display = 'none';
+            document.getElementById('chatScreen').style.display = 'flex';
+            setInitialMessageTime();
+          } else {
+            alert('Login falhou. Verifique suas credenciais.');
           }
 
           // Se chegou aqui, a mensagem não indica sucesso
-          throw new Error('Resposta inesperada do servidor');
+          // throw new Error('Resposta inesperada do servidor');
 
         } catch (error) {
           console.error('Erro no login:', error);
