--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
       }
 
       async function sendWhatsAppMessage(messageText) {
-        const token = document.cookie.split('; ').find(row => row.startsWith('authToken='))?.split('=')[1];
+        const token = document.cookie.split('; ').find(row => row.startsWith('accessToken='))?.split('=')[1];
         if (!token) return false;
 
         axiosInstance.defaults.headers.common['Authorization'] = `Bearer ${token}`;
