--- a/index.html
+++ b/index.html
@@ -243,17 +243,21 @@
       /* color: rgb(0, 0, 0); */
       position: absolute;
       bottom: 7px;
-      left: 50%;
+      /* left: 50%; */
+      left: calc(50% + 0.5px);
       transform: translateX(-50%);
       display: flex;
       gap: 40px;
       align-items: center;
-      width: calc(100% - 20px);
+      /* width: calc(100% - 16px); */
+      width: calc(100% - 17.5px);
       /* height: calc(20% + 95px); */
       height: 40px;
       justify-content: center;
-      border-bottom-left-radius: 48px;
-      border-bottom-right-radius: 48px;
+      /* border-bottom-left-radius: 48px; */
+      border-bottom-left-radius: 50px;
+      /* border-bottom-right-radius: 48px; */
+      border-bottom-right-radius: 50px;
     }
 
     .nav-button {
@@ -474,29 +478,6 @@
           alert('Erro ao fazer login. Verifique suas credenciais.');
         }
       }
-
-      // async function sendWhatsAppMessage(messageText) {
-      //   const token = document.cookie.split('; ').find(row => row.startsWith('accessToken='))?.split('=')[1];
-      //   console.log("Token:", token);
-      //   console.log("Cookie accessToken:", document.cookie.accessToken);
-      //   if (!token) return false;
-
-      //   axiosInstance.defaults.headers.common['Authorization'] = `Bearer ${token}`;
-
-      //   const payload = {
-      //     sessionName: "corretor",
-      //     contacts: [{ number: "556299957980", nome_inicial: "José", nome_completo: "José Freitas" }],
-      //     message: messageText
-      //   };
-
-      //   try {
-      //     const result = await axiosInstance.post('/api/send-pers-message', payload);
-      //     return result.status === 200;
-      //   } catch (error) {
-      //     console.error("Erro ao enviar mensagem:", error);
-      //     return false;
-      //   }
-      // }
 
       async function sendWhatsAppMessage(messageText) {
         const payload = {
