--- a/v1-html-only/index.html
+++ b/v1-html-only/index.html
@@ -481,13 +481,17 @@
 
       async function sendWhatsAppMessage(messageText) {
         const payload = {
-          sessionName: "corretor",
-          contacts: [{ number: "556299957980", nome_inicial: "José", nome_completo: "José Freitas" }],
-          message: messageText
+          // sessionName: "Corretor",
+          instanceName: "Corretor",
+          // contacts: [{ number: "556299957980", nome_inicial: "José", nome_completo: "José Freitas" }],
+          number: "556299957980",
+          // message: messageText
+          text: messageText
         };
 
         try {
-          const result = await axiosInstance.post('/api/send-pers-message', payload);
+          // const result = await axiosInstance.post('/api/send-pers-message', payload);
+          const result = await axiosInstance.post('/api/whats-evo/send-text', payload);
           return result.status === 200;
         } catch (error) {
           console.error("Erro ao enviar mensagem:", error.response?.data || error.message || error);
